// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout renders correctly with title 1`] = `
Array [
  <div
    className="sc-bdVaJa ekuuOW"
  >
    <a
      href="/"
    >
      home
    </a>
    <a
      href="https://linkedin.com/in/hendrikmolder"
    >
      linkedin
    </a>
    <a
      href="/music"
      partiallyActive={true}
    >
      music
    </a>
    <a
      href="/blog"
      partiallyActive={true}
    >
      blog
    </a>
  </div>,
  <div
    className="ui container sc-ifAKCX gNRYGQ"
  >
    <div
      className="sc-EHOje hmOhql"
    />
    <h1>
      Test
    </h1>
    <h2
      className="sc-bZQynM ffMfhA"
    >
      test
    </h2>
    <p>
      test
    </p>
  </div>,
]
`;

exports[`Layout renders correctly without title 1`] = `
Array [
  <div
    className="sc-bdVaJa ekuuOW"
  >
    <a
      href="/"
    >
      home
    </a>
    <a
      href="https://linkedin.com/in/hendrikmolder"
    >
      linkedin
    </a>
    <a
      href="/music"
      partiallyActive={true}
    >
      music
    </a>
    <a
      href="/blog"
      partiallyActive={true}
    >
      blog
    </a>
  </div>,
  <div
    className="ui container sc-ifAKCX gNRYGQ"
  >
    <div
      className="sc-EHOje hmOhql"
    />
    <p>
      test
    </p>
  </div>,
]
`;
